--- a/pokemon.html
+++ b/pokemon.html
@@ -10,7 +10,7 @@
   <body>
     <div class="pokemon-page">
       <div class="return">
-        <a href="http://127.0.0.1:5500/"><button class="return">←</button></a>
+        <a href="index.html"><button class="return">←</button></a>
       </div>
       <h1 id="pokemon-page-name"></h1>
       <div class="pokemon-main-content">
